<resources>

    <!-- Facebook SDK Resource -->
    <string name="facebook_app_id">1991089837786884</string>
    <string name="fb_login_protocol_scheme">fb1991089837786884</string>


    <string name="text_empty" />

    <!-- Navigation items -->
    <string name="app_name">GoFoodie</string>
    <string name="navigation_dashboard">Dashboard</string>
    <string name="navigation_combos">Order</string>
    <string name="navigation_wallet">Wallet</string>
    <string name="navigation_cart">Cart</string>
    <string name="navigation_profile">Profile</string>

    <!-- Menu -->
    <string name="menu_search">Search</string>
    <string name="menu_filter">Meal Preference</string>
    <string name="menu_pick_date">Pick Date</string>
    <string name="menu_long_vacation">Long Term Vacation</string>
    <string name="menu_short_vacation">Short Term Vacation</string>
    <string name="menu_emergency">Emergency Holidays</string>
    <string name="menu_proceed">Proceed</string>
    <string name="menu_new">Add Restaurant</string>
    <string name="menu_share">Share</string>
    <string name="menu_sort">Sort</string>
    <string name="menu_location">Location</string>
    <string name="menu_save">Save</string>

    <string name="select_country">Select country</string>
    <string name="select_city">Select City</string>
    <string name="select_area">Select Area</string>
    <string name="password_reset">Password Reset</string>
    <string name="change_password">Change Password</string>

    <!-- UI Messages and Warnings -->
    <string name="test">Test</string>
    <string name="forgot_password_quote">
            Please provide your registered email address, we will send you the password to your registered email address.
    </string>
    <string name="change_password_quote">
            Keep changing your password timely to ensure your account security.
    </string>
    <string name="location_preference_quote">
            We will save your location preference, so that you can browse uninterrupted.
    </string>
    <string name="title_activity_abc">ABC</string>

    <!-- UI validation error messages -->
    <string name="cannot_be_empty">Cannot be empty</string>
    <string name="proper_mobile_number">Enter proper mobile number</string>
    <string name="proper_email_id">Enter proper Email ID</string>
    <string name="no_reviews">No reviews present</string>
    <string name="alpha_allowed">Only Alphabets are allowed</string>
    <string name="select_location_first">First select your location.</string>
    <string name="confirm_password_not_match">Confirm Password not matching</string>
    <string name="connecting">Connecting</string>
    <string name="invoice">Invoice</string>
    <string name="accept_the_terms">Accept the terms</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_edit_combo">Meal Items</string>
    <string name="title_activity_restaurant_profile">Restaurant Profile</string>
    <string name="title_activity_combo_plan_description">Combo Plan</string>
    <string name="title_activity_shortlisted_restaurants">Shortlisted Restaurants</string>

    <string name="desc_platinum_plan">PLATINUM: Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500s.</string>
    <string name="title_activity_assistant">Welcome</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="my_orders">My Orders</string>
    <string name="week_preference">Week Preference</string>
    <string name="meal_plan">Meal Plan</string>
    <string name="combo_plans">Combo Plans</string>
    <string name="address_change">Address Change</string>
    <string name="image">Image</string>
    <string name="click">Click</string>
    <string name="restaurant_list">Restaurant List</string>
    <string name="success">Success</string>
    <string name="failed">Failed</string>
    <string name="payment">Payment</string>
    <string name="update_profile">Update Profile</string>
    <string name="reviews">Reviews</string>
    <string name="meal_preference">Meal Preference</string>
    <string name="recharge_plans">Recharge Plans</string>
    <string name="location_preference">Location Preference</string>
    <string name="welcome">GoFoodie</string>
    <string name="title_activity_combo_description">Combo Plan</string>

</resources>
