<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/home_a"
        android:title="@string/navigation_dashboard" />

    <item
        android:id="@+id/navigation_combos"
        android:icon="@drawable/combo_a"
        android:title="@string/navigation_combos" />

    <item
        android:id="@+id/navigation_wallet"
        android:icon="@drawable/wallet_a"
        android:title="@string/navigation_wallet" />

    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/cart_a"
        android:title="@string/navigation_cart" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile_a"
        android:title="@string/navigation_profile" />

</menu>
